Add CAA example

--- a/examples/caa/caa.ipynb
+++ b/examples/caa/caa.ipynb
@@ -83,7 +83,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "c7f95af6aeee45cba40e2fc5b8c0dac7",
+       "model_id": "923ce28b228e43fb81564d8a6ccd0fd7",
        "version_major": 2,
        "version_minor": 0
       },
@@ -97,7 +97,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "c0f675023a394682a3c2d1242ac8da56",
+       "model_id": "43d6989a0c0341559c33fbe59581ce73",
        "version_major": 2,
        "version_minor": 0
       },
@@ -152,8 +152,8 @@
     "random.seed(42)\n",
     "random.shuffle(train_data)\n",
     "random.shuffle(test_data)\n",
-    "train_data = train_data[:90]\n",
-    "test_data = test_data[:10]"
+    "train_data = train_data\n",
+    "test_data = test_data"
    ]
   },
   {
@@ -165,7 +165,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "90 10\n"
+      "1080 120\n"
      ]
     }
    ],
@@ -365,14 +365,14 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Evaluating: 100%|██████████| 10/10 [00:03<00:00,  2.51it/s]"
+      "Evaluating: 100%|██████████| 120/120 [00:44<00:00,  2.69it/s]"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Unsteered model: 0.832\n"
+      "Unsteered model: 0.685\n"
      ]
     },
     {
@@ -405,7 +405,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Training steering vector: 100%|██████████| 90/90 [00:31<00:00,  2.90it/s]\n"
+      "Training steering vector: 100%|██████████| 1080/1080 [06:17<00:00,  2.86it/s]\n"
      ]
     }
    ],
@@ -424,7 +424,7 @@
     "    layers = [15], \n",
     "    # NOTE: The second last token corresponds to the A/B position\n",
     "    # which is where we believe the model makes its decision \n",
-    "    read_token_index=-2,\n",
+    "    read_token_index=-2,RESULTS[f\"steer_0\"] = result\n",
     "    show_progress=True,\n",
     ")"
    ]
@@ -438,7 +438,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "SteeringVector(layer_activations={15: tensor([ 0.1082, -0.0322,  0.0634,  ..., -0.1818,  0.0012,  0.1102],\n",
+      "SteeringVector(layer_activations={15: tensor([ 0.0644, -0.0403,  0.0907,  ..., -0.1613, -0.0146,  0.0941],\n",
       "       dtype=torch.float16)}, layer_type='decoder_block')\n"
      ]
     }
@@ -463,7 +463,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Cosine similarity: 0.966\n"
+      "Cosine similarity: 0.995\n"
      ]
     }
    ],
@@ -496,15 +496,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "+1 steered model: 0.825\n",
-      "Unsteered model: 0.832\n"
+      "+1 steered model: 0.716\n",
+      "Unsteered model: 0.685\n"
      ]
     }
    ],
@@ -544,15 +544,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "+1 steered model: 0.825\n",
-      "Unsteered model: 0.832\n"
+      "+1 steered model: 0.716\n",
+      "Unsteered model: 0.685\n"
      ]
     }
    ],
