--- a/examples/caa/caa.ipynb
+++ b/examples/caa/caa.ipynb
@@ -539,31 +539,30 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "One annoyance with the above workflow is the need to manually call `hook.remove()` after steering the model. It's possible to use a context manager to automatically remove the hook after a single inference. We provide this functionality with `steering_vector.apply`"
+    "One annoyance with the above workflow is the need to manually call `hook.remove()` after steering the model. It's possible to use a context manager to automatically remove the hook after exiting the context's scope. We provide this functionality with `steering_vector.apply`"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "+1 steered model: 0.716\n",
-      "Unsteered model: 0.685\n"
+      "-1 steered model: 0.641\n",
+      "0 steered model: 0.685\n",
+      "1 steered model: 0.716\n"
      ]
     }
    ],
    "source": [
-    "with steering_vector.apply(model, multiplier=1, min_token_index=0):\n",
-    "    result = evaluate_model(model, tokenizer, test_dataset)\n",
-    "    print(f\"+1 steered model: {result:.3f}\")\n",
-    "    # Hook is automatically removed after exiting context\n",
-    "\n",
-    "result = evaluate_model(model, tokenizer, test_dataset)\n",
-    "print(f\"Unsteered model: {result:.3f}\")"
+    "for multiplier in (-1, 0, 1):\n",
+    "    with steering_vector.apply(model, multiplier=multiplier, min_token_index=0):\n",
+    "        result = evaluate_model(model, tokenizer, test_dataset, show_progress=True)\n",
+    "        print(f\"{multiplier} steered model: {result:.3f}\")\n",
+    "        # Hook is automatically removed after exiting scope"
    ]
   }
  ],
