--- a/examples/caa_sycophancy.ipynb
+++ b/examples/caa_sycophancy.ipynb
@@ -193,11 +193,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "pos, neg = train_dataset[0]\n",
     "print(\"#### Positive Prompt ####\")\n",
-    "print(train_dataset[0].positive_prompt)\n",
+    "print(pos)\n",
     "print()\n",
     "print(\"#### Negative Prompt ####\")\n",
-    "print(train_dataset[0].negative_prompt)"
+    "print(neg)"
    ]
   },
   {
@@ -286,14 +287,14 @@
     "def evaluate_model(\n",
     "    model: Model, \n",
     "    tokenizer: Tokenizer, \n",
-    "    dataset: Iterable[SteeringVectorTrainingSample],\n",
+    "    dataset: Iterable[tuple[str, str]],\n",
     "    show_progress: bool = False\n",
     "):\n",
     "    \"\"\" Evaluate model on dataset and return normalized probability of correct answer \"\"\"\n",
     "    total_pos_prob = 0.0\n",
-    "    for sample in tqdm(dataset, disable=not show_progress, desc=\"Evaluating\"):\n",
-    "        pos: TextProbs = get_text_probs(sample.positive_prompt, model, tokenizer)\n",
-    "        neg: TextProbs = get_text_probs(sample.negative_prompt, model, tokenizer)\n",
+    "    for pos_prompt, neg_prompt in tqdm(dataset, disable=not show_progress, desc=\"Evaluating\"):\n",
+    "        pos: TextProbs = get_text_probs(pos_prompt, model, tokenizer)\n",
+    "        neg: TextProbs = get_text_probs(neg_prompt, model, tokenizer)\n",
     "        # NOTE: We compare logprobs of the full (prompt + response).  \n",
     "        # This is equivalent to comparing response log-probs only.  \n",
     "        # Because the prompts are the same for both positive and negative, \n",
