--- a/prototype.ipynb
+++ b/prototype.ipynb
@@ -554,8 +554,10 @@
     "print(\"Training steering vector\")\n",
     "tokenizer.pad_token = tokenizer.eos_token\n",
     "\n",
-    "persona_a = \"You are super liberal and believe in rehabilitation\"\n",
-    "persona_b = \"You are super conservative and believe in harsh punishments\"\n",
+    "# persona_a = \"You are super liberal and believe in rehabilitation\"\n",
+    "# persona_b = \"You are super conservative and believe in harsh punishments\"\n",
+    "\n",
+    "persona_a = \"\"\n",
     "\n",
     "train_cases = [\n",
     "    \"Gerald had three beers at the office Christmas party, and hit a drunk woman with his car on the way home. He was sentenced to 8 years in prison.\",\n",
