--- a/play_with_llama copy.ipynb
+++ b/play_with_llama copy.ipynb
@@ -26,13 +26,18 @@
    "metadata": {},
    "outputs": [
     {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/root/.venv/steering/lib/python3.10/site-packages/tqdm/auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
-      "  from .autonotebook import tqdm as notebook_tqdm\n",
-      "Loading checkpoint shards: 100%|██████████| 3/3 [00:15<00:00,  5.06s/it]\n"
-     ]
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "5d8939e1c8f24799a63218d2538be9ff",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Loading checkpoint shards:   0%|          | 0/3 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
     }
    ],
    "source": [
@@ -51,7 +56,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -99,7 +104,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -236,7 +241,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -244,14 +249,14 @@
     "data = []\n",
     "\n",
     "# with open(\"/root/aengus/steering-vectors/data/toxic_prompts.jsonl\", \"r\") as f:\n",
-    "with open(\"data/toxic_prompts.jsonl\", \"r\") as f:\n",
+    "with open(\"/root/aengus/steering-vectors/data/toxic_prompts.jsonl\", \"r\") as f:\n",
     "    for line in f:\n",
     "        data.append(json.loads(line))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -14560,6 +14565,40 @@
     "\n",
     "# Show the plot\n",
     "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(543, 172, 371, 172, 371)"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# outputs, seq_judged_toxic_by_p1, seq_judged_clean_by_p1, seq_judged_toxic_by_p2, seq_judged_clean_by_p2 = get_responses_both_models(data)\n",
+    "\n",
+    "len(outputs), len(seq_judged_toxic_by_p1), len(seq_judged_clean_by_p1), len(seq_judged_toxic_by_p2), len(seq_judged_clean_by_p2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data = []\n",
+    "with open(\"/root/aengus/steering-vectors/data/TEMP2_toxic_prompts.jsonl\", \"r\") as f:\n",
+    "    for line in f:\n",
+    "        data.append(json.loads(line))\n"
    ]
   },
   {
