--- a/aengus/patching_fuckaround.ipynb
+++ b/aengus/patching_fuckaround.ipynb
@@ -421,7 +421,7 @@
     "#         resid_toxic_harsh_cache[key] = toxic_harsh_cache[key]\n",
     "#     toxic_harsh_cache[key].cpu()\n",
     "\n",
-    "from patching_helpers import get_resid_cache_from_forward_pass\n",
+    "from aengus.patching_helpers import get_resid_cache_from_forward_pass\n",
     "toxic_harsh_logits, resid_toxic_harsh_cache = get_resid_cache_from_forward_pass(hooked_model, toxic_harsh_tokens)  \n"
    ]
   },
@@ -569,7 +569,7 @@
     }
    ],
    "source": [
-    "from patching_helpers import get_resid_cache_from_forward_pass, run_patching_experiment_with_hook, interpolation_hook, plot_logit_differences\n",
+    "from aengus.patching_helpers import get_resid_cache_from_forward_pass, run_patching_experiment_with_hook, interpolation_hook, plot_logit_differences\n",
     "\n",
     "results_of_results = []\n",
     "for alpha in [-.5, -.25, 0, 0.1, 0.2, 0.3, 0.4, .5, .6, .7, .8, .9, 1, 1.5, 2]:\n",
